    verbatim paragraph the formatting codes were not rendered; thanks to
    Nacho Barrientos Arias for spotting.
  * Don't add a trailing comma to Depends: if there are no extra
    dependencies.

  [ Damyan Ivanov ]
  * rules.* templates: add "install" to phony targets list
  * dh-make-perl: when storing versioned dependencies, remove any leading 'v'

  [ Martín Ferrari ]
  * Make source and diff .PHONY targets too.

 -- gregor herrmann <gregor+debian@comodo.priv.at>  Sun, 09 Mar 2008 22:00:23 +0100

dh-make-perl (0.38) unstable; urgency=low

  [ gregor herrmann ]
  * Fix inline documentation: it's Vcs-Svn and Vcs-Browser nowadays.

  [ Damyan Ivanov ]
  * all templates: use $(TMP) in the comment before the install
  * MakeMaker templates: do not set INSTALLVENDORARCH and VENDORARCHEXP when
    configuring. Instead, verbosely remove the empty dirs if they exist. Perl
    5.10's MakeMaker is reported to be fixed.

 -- Damyan Ivanov <dmn@debian.org>  Thu, 10 Jan 2008 17:00:03 +0200

dh-make-perl (0.37) unstable; urgency=low

  [ Martín Ferrari ]
  * Replace erroneous reference to $opts{basepkgs} in extract_depends, thanks
    to Hilko Bengen for the correction. (Closes: #452122).
  * Obtain a list of matching modules when querying CPAN (instead of just the
    first match) to allow it to correctly choose between module names that
    only differ in case. (Closes: #451838).

  [ Gunnar Wolf ]
  * Now generates packages with standards-version: 3.7.3
    (i.e. meta-bumped-up standards-version)

  [ gregor herrmann ]
  * Extend regex for matching upstream versions on the creation of
    debian/watch.

 -- Damyan Ivanov <dmn@debian.org>  Fri, 28 Dec 2007 15:16:51 +0200

dh-make-perl (0.36) unstable; urgency=low

  * Fix install dependencies in rules templates
    Before:
      install: build install-stamp
      install-stamp:
    After:
      install: install-stamp
      install-stamp: build-stamp
    Avoids problems with parallel builds